--- a/ObjectiveC_Example2/Base.lproj/Main.storyboard
+++ b/ObjectiveC_Example2/Base.lproj/Main.storyboard
@@ -55,8 +55,8 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="J1Z-LP-kVt">
-                                <rect key="frame" x="67" y="104" width="240" height="229"/>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="J1Z-LP-kVt" customClass="MainClockView">
+                                <rect key="frame" x="84" y="85" width="206" height="206"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
@@ -65,6 +65,7 @@
                     </view>
                     <connections>
                         <outlet property="clockDisplay" destination="GhH-X0-Sik" id="sxr-VM-B54"/>
+                        <outlet property="pClockView" destination="J1Z-LP-kVt" id="lk1-Wi-Iaq"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Xmk-O2-OQi" userLabel="First Responder" sceneMemberID="firstResponder"/>
